CSS style done - only issue is vertical text alignment...added blue moneybag to fill space between inputs...deleted notes from readme...added comma to Regular Expression for expense name to allow inputs like Wendy's

--- a/assets/budgetstyle.css
+++ b/assets/budgetstyle.css
@@ -24,17 +24,12 @@ HTML {
   width: 150px;
   padding: 10px;
   text-align: center;
-  font-size: medium;
+  font-size: 18px;
+  font-family: monospace;
   border: solid 3px rgb(156, 199, 219);
   border-radius: 5px;
   opacity: 85%;
 }
-
-.inputs:hover {
-  cursor: text;
-  background-color: rgb(156, 199, 219);
-}
-
 
 /* Expense List */ 
 
@@ -60,6 +55,7 @@ li {
   font-weight: 500;
   font-family: monospace;
   color: rgb(21, 88, 119);
+  margin-bottom: 4px;
 }
 
 UL li.selected {
@@ -95,12 +91,13 @@ UL li.selected {
   height: 11%;
   width: 10%;
   text-align: center;
-  font-size: 16px;
+  font-size: 22px;
+  font-family: Georgia, serif;
   overflow: hidden;
   white-space: nowrap;
-  font-size: large; 
   border: 5px solid rgb(156, 185, 219);
   border-radius: 5px;
+  background-color: rgb(220, 244, 255);
 }
 
 /* Income */
@@ -109,9 +106,9 @@ UL li.selected {
   left: 55vh;
   top: 60vh;
   text-align: center;
+  font-size: 18px;
+  font-family: Georgia, serif;
 }
-
-
 
 #incomeContainer {
   position: absolute;
@@ -125,7 +122,11 @@ UL li.selected {
   overflow: hidden;
   white-space: nowrap;
   text-align: center;
-  border: 3px dotted rgb(33, 110, 226);
+  font-size: 18px;
+  font-family: Georgia, serif;
+  border: 4px dotted rgb(47, 120, 230); 
+  background-color: #cbf0ff;
+  opacity: 80%;
 }
 
 #incomeContainer:empty {
@@ -133,25 +134,27 @@ UL li.selected {
   min-width: 150px;
   min-height: 22px;
   max-height: 22px;
-  border: 1px dashed rgb(33, 110, 226);
+  border: 1px dashed rgb(47, 120, 230);
 }
 
 #budgetContainer {
   position: absolute;
   right: 30%;
-  top: 2vh;
+  top: 2vh; 
   padding: 2px 10px;
   min-height: 11%;
   max-height: 11%;
   min-width: 12%;
   max-width: 12%;
   text-align: center;
-  font-size: 16px;
+  font-size: 22px;
+  font-family: Georgia, serif;
   overflow: hidden;
   white-space: nowrap;
   margin-right: 12%;
   border: 5px solid rgb(156, 185, 219);
   border-radius: 5px;
+  background-color: rgb(220, 244, 255);
 }
 
 /* BUTTONS */
@@ -166,25 +169,22 @@ UL li.selected {
   border: 2px solid rgb(106, 180, 230);
   border-radius: 5px;
   background-color: rgb(182, 232, 255);
-  color: rgb(0, 33, 122);
+  color: rgb(2, 14, 46);
   opacity: 70%;
 }
 
-.btn:hover {
-  background-color: rgb(126, 214, 255);
-}
-
-/* displays on mouse hover over buttons */
+/* pop-up displays on mouse hover over buttons */
 .hide {
   display: none;
   float: right;
-  right: 13%;
+  right: 12%;
   min-height: 10px;
   max-height: 30px;
   min-width: 8em;
   max-width: 8em;
   padding: 5px;
   text-align: center;
+  font-family: Georgia, serif;
   opacity: 80%;
   border: 1px dashed rgb(126, 214, 255);
 }
@@ -194,6 +194,18 @@ UL li.selected {
   display: block;
   color: black;
   font-size: 10px;
+}
+
+.btn:hover {
+  background-color: rgb(126, 214, 255);
+}
+
+.btn:active {
+  background: #d7efff;
+  -webkit-box-shadow: inset 0px 0px 5px #d7efff;
+  -moz-box-shadow: inset 0px 0px 5px #d7efff;
+  box-shadow: inset 0px 0px 5px #d7efff;
+  outline: none;
 }
 
 /* Calculate Budget */
@@ -318,4 +330,42 @@ UL li.selected {
   max-height: 99%;
   padding: 6.5px 15px;
   opacity: 50%;
+}
+
+/* UL column stripes */
+
+
+#columnfive {
+  position: absolute;
+  border: 3px solid rgb(126, 214, 255);
+  background-color: rgb(126, 214, 255);
+  left: 53%;
+  top: 21.5%;
+  min-height: 30%;
+  max-height: 30%;
+  padding: 2.5px 3px;
+  opacity: 50%;
+}
+
+#columnsix {
+  position: absolute;
+  border: 3px solid rgb(126, 214, 255);
+  background-color: rgb(126, 214, 255);
+  left: 54.5%;
+  top: 21.5%;
+  min-height: 30%;
+  max-height: 30%;
+  padding: 2.5px 3px;
+  opacity: 50%;
+}
+
+/* moneybag */
+img {
+  display: block;
+  position: absolute;
+  top: 62%;
+  left: 33%;
+  width: 7.5%;
+  margin: auto;
+  opacity: 65%;
 }
